@@ -64,6 +64,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Always enable the "gateway" primitive.
       Properly reject "link proto" for DLT_BACNET_MS_TP.
       Extend "link (host|broadcast)" support onto DLT_BACNET_MS_TP.
+      Do not try matching RFC 1051 system codes for ARCnet.
     rpcap:
       Support user names and passwords in rpcap:// and rpcaps:// URLs.
       Add a -t flag to rpcapd to specify the data channel port; from
